# parser_for_companies

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  analytics_leads_2026-06-13.csv  docker-compose.yml  main.py  parser.py  places_eda.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  test_osm.py
.github/workflows/: ci.yml
analysis/: data_clean.csv
app/: __init__.py  config.py  constants.py  main.py  schemas.py
app/api/: __init__.py  routes.py
app/ml/: __init__.py  features.py  model.py  train.py
app/services/: __init__.py  ai.py  cache.py  export.py  osm.py  overview.py  pitch.py  scoring.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_cache.py  test_ml.py  test_osm.py  test_overview.py  test_scoring.py
