[project]
name = "leadanalytics"
version = "1.0.0"
description = "Парсер локального бизнеса (OpenStreetMap) с оценкой аналитического потенциала и генератором холодных писем"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "ruff>=0.4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.ipynb", ".venv", "analysis"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Тесты и модули с длинными текстами писем/промптов содержат осмысленно
# длинные строки, которые не стоит переносить ради лимита длины.
"tests/*" = ["E501"]
"app/services/pitch.py" = ["E501"]
"app/services/ai.py" = ["E501"]
